<resources>
    <string name="app_name">Royal Chess</string>
    <string name="change_language">Сменить язык</string>
    <string name="start_game">Начать игру</string>
    <string name="kings">Короли</string>
    <string name="statistics">Статистика</string>
    <string name="exit">Выход</string>
    <string name="select_language">Выберите язык</string>
    <string name="russian">Русский</string>
    <string name="english">Английский</string>

    <string name="statistics_title">Статистика</string>
    <string name="general_statistics">ОБЩАЯ СТАТИСТИКА</string>
    <string name="wins_by_color">ПОБЕДЫ ПО ЦВЕТАМ</string>
    <string name="white_wins_stat">Белые: 12 побед</string>
    <string name="black_wins_stat">Черные: 8 побед</string>
    <string name="kings_statistics">СТАТИСТИКА КОРОЛЕЙ</string>
    <string name="human_king">Король людей: 7 игр</string>
    <string name="dragon_king">Король драконов: 5 игр</string>
    <string name="elf_king">Король эльфов: 3 игры</string>
    <string name="gnom_king">Король гномов: 5 игр</string>
    <string name="captured_pieces">СЪЕДЕННЫЕ ФИГУРЫ</string>
    <string name="total_pieces">Всего: 147 фигур</string>
    <string name="pawns">Пешки: 89</string>
    <string name="rooks">Ладьи: 18</string>
    <string name="knights">Кони: 15</string>
    <string name="bishops">Слоны: 12</string>
    <string name="queens">Ферзи: 10</string>
    <string name="game_time">ВРЕМЯ В ИГРЕ</string>
    <string name="total_time">Общее время: 45ч 32м</string>
    <string name="avg_game">Средняя игра: 25м</string>
    <string name="max_session">Максимальная сессия: 3ч 15м</string>
    <string name="additional">ДОПОЛНИТЕЛЬНО</string>
    <string name="total_games">Всего игр: 20</string>
    <string name="draws">Ничьих: 0</string>
    <string name="best_streak">Лучшая серия: 5 побед</string>

    <string name="choose_color">Выберите цвет фигур</string>
    <string name="white_pieces">Белые</string>
    <string name="black_pieces">Черные</string>

    <string name="your_turn">Ваш ход</string>
    <string name="opponent_turn">Ход противника</string>
    <string name="white">Белые</string>
    <string name="black">Черные</string>
    <string name="game_restarted">Игра перезапущена</string>


    <string name="kings_gallery">Галерея Королей</string>
    <string name="king_selected">Выбран: %s</string>

    <string name="king_man_name">Король людей</string>
    <string name="king_dragon_name">Король драконов</string>
    <string name="king_elf_name">Король эльфов</string>
    <string name="king_gnom_name">Король гномов</string>

    <string name="king_man_description">Мудрый правитель человеческого королевства, известный своей справедливостью</string>
    <string name="king_dragon_description">Древний дракон, охраняющий сокровища гор</string>
    <string name="king_elf_description">Вечный защитник эльфийских лесов и магии</string>
    <string name="king_gnom_description">Искусный мастер подземных царств и механизмов</string>

    <string name="faction_human">Люди</string>
    <string name="faction_dragon">Драконы</string>
    <string name="faction_elf">Эльфы</string>
    <string name="faction_gnome">Гномы</string>


    <string name="time_settings">Настройки времени</string>
    <string name="choose_time">Выберите время на игру</string>
    <string name="time_1_minute">1 минута</string>
    <string name="time_3_minutes">3 минуты</string>
    <string name="time_5_minutes">5 минут</string>
    <string name="time_10_minutes">10 минут</string>
    <string name="time_30_minutes">30 минут</string>
    <string name="time_unlimited">Без ограничения</string>
    <string name="selected_time">Выбрано: %d минут</string>

    <string name="confirm">Подтвердить</string>
    <string name="choose">Выбрать</string>

    <string name="time_out">Время вышло!</string>
    <string name="white_wins">Победили Белые!</string>
    <string name="black_wins">Победили Черные!</string>
    <string name="new_game">Новая игра</string>

    <string name="no_browser">Не найдено приложение для открытия ссылки</string>

    <string name="chess_rules_url">https://ru.wikipedia.org/wiki/Правила_шахмат</string>

    <string name="open_with">Открыть с помощью</string>

</resources>