<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/bg1"
    android:id="@+id/main">

    <ImageButton
        android:id="@+id/btnLanguage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_change_language"
        android:scaleType="centerInside"
        android:background="@drawable/btn_language_bg"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp" />

    <ImageButton
        android:id="@+id/btnRules"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_chess_rules"
        android:scaleType="centerInside"
        android:background="@drawable/btn_language_bg"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn_blue_bg"
            android:text="@string/start_game"
            android:textSize="18sp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnKings"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn_blue_bg"
            android:text="@string/kings"
            android:textSize="18sp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnStats"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn_red_bg"
            android:text="@string/statistics"
            android:textSize="18sp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="@drawable/btn_red_bg"
            android:text="@string/exit"
            android:textSize="18sp"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</RelativeLayout>